--- a/package.json
+++ b/package.json
@@ -26,20 +26,15 @@
     "dev": "vite"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/vue": "^7.0.0",
-    "@types/jest": "^29.5.5",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/test-utils": "^2.4.1",
-    "jest": "^29.7.0",
     "jsdom": "^22.1.0",
     "typescript": "^5.2.2",
     "vite": "^4.4.10",
     "vitest": "^0.34.6",
-    "vue": "^3.3.4",
-    "vue-jest": "^3.0.7",
-    "vue-template-compiler": "^2.7.14"
+    "vue": "^3.3.4"
   }
 }
