--- a/.github/workflows/general-pr.yaml
+++ b/.github/workflows/general-pr.yaml
@@ -1,12 +1,12 @@
 name: "General Pull Request"
-on: [pull_request, push]
+on: [pull_request]
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set Node.js 16.x
+      - name: Set Node.js 18.x
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
